<resources>
    <string name="app_name">张天宁的app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="jump_next">跳转下一个界面</string>
    <string name="another">打开另外一个应用</string>
    <string name="no_data">没有数据</string>

    <!--login 界面-->
    <string name="name">姓名</string>
    <string name="password">密码</string>
    <string name="install_apk">去看看手机中安装的程序</string>
    <string name="ztn_file_manager">浏览一下手机中的文件</string>
    <string name="headImg">头像</string>
    <string name="short_default_string">default</string>
    <string name="default_string">default_string</string>
    <string name="logo_setting">这是一张图片</string>
    <string name="wave_num">波的个数</string>
    <string name="score">分数</string>
    <string name="sure">确认</string>
    <string name="another_title">另一些功能</string>
    <string name="self_view">自定义view</string>
    <string name="chat">聊天界面</string>
    <string name="send_message">发送消息</string>
    <string name="demo_map">地图</string>

    <!-- 用户信息界面 -->
    <string name="avatar">头像</string>
    <string name="save">保存</string>

</resources>
