<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/next"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/jump_next"/>
        <item
                android:id="@+id/another"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/another"/>
        <item
                android:id="@+id/view_installed_apk"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/install_apk"/>
        <item
                android:id="@+id/show_file_in_phone"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/ztn_file_manager"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send"/>
        </menu>
    </item>

</menu>
