<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
            android:id="@+id/headImg"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dp_10"
            android:contentDescription="@string/headImg"
            app:layout_constraintBottom_toBottomOf="@id/parent"
            app:layout_constraintStart_toStartOf="@id/parent"
            app:layout_constraintTop_toTopOf="@id/parent"
    />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/centerLine"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

    <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/short_default_string"
            android:textColor="@color/black_3e3e3e"
            android:textSize="@dimen/sp_17"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            app:layout_constraintBottom_toBottomOf="@+id/centerLine"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintEnd_toStartOf="@id/selected"
            app:layout_constraintStart_toEndOf="@id/headImg"/>


    <TextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/default_string"
            android:textColor="@color/gray_868686"
            app:layout_constraintEnd_toStartOf="@id/selected"
            app:layout_constraintStart_toEndOf="@id/headImg"
            app:layout_constraintTop_toBottomOf="@+id/centerLine"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/headImg"
            android:layout_marginStart="@dimen/margin_10"
            android:background="@color/gray_dc"
            app:layout_constraintBottom_toBottomOf="@id/parent"/>

    <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/selected"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="@dimen/margin_10"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
